--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.6",
     "express": "^5.2.1",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "geoip-lite": "^1.4.10",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "html-minifier-terser": "^7.2.0"
